# Snappix

./: .gitignore  Cargo.toml  README.md  justfile  project.json  rustfmt.toml
apps/: Cargo.toml  build.rs
apps/config/: app_config.json  hotkeys.json
apps/resources/icons/: icon.icns
apps/src/: app_errors.rs  main.rs
apps/src/app/: associations.rs  auth.rs  mod.rs  navigation.rs  project.rs
apps/src/config/: app_config.rs  hotkeys.rs  mod.rs  recent_projects.rs  user.rs
apps/src/editor_runtime/: callbacks.rs  clipboard.rs  helpers.rs  history.rs  hotkeys.rs  mod.rs  settings.rs  state.rs  sync.rs
apps/ui/: app-window.slint
apps/ui/components/: I18n.slint  Themes.slint  ToolBar.slint  Tooltip.slint
apps/ui/dialogs/: NewProjectDialog.slint  RenameDialog.slint
apps/ui/editor/: BlueprintCanvas.slint  BlueprintNodeCard.slint  Canvas.slint  CanvasContextMenus.slint  CanvasZoomControls.slint  ComponentExplorer.slint  ComponentLibrary.slint  ContextActionMenu.slint  PageTabs.slint  PropertiesPanel.slint
apps/ui/editor/icons/: ComponentIcons.slint
apps/ui/models/: EditorModels.slint
apps/ui/utils/: StringSearch.slint
apps/ui/views/: AuthScene.slint  BlueprintEditorScene.slint  ProjectSelectedScene.slint  VisualEditorScene.slint
apps/ui/views/blueprint/: BlueprintSidebar.slint
apps/ui/views/visual/: HistoryPreviewOverlay.slint  PressedKeysOverlay.slint  VisualHotSidebar.slint  VisualSidebarPanel.slint
crates/core-blueprint/: Cargo.toml  api.rs  catalog.rs  codegen.rs  compile.rs  lib.rs  lowering.rs  model.rs  validate.rs
crates/core-ui-graphs/: Cargo.toml  element.rs  layout.rs  lib.rs  project.rs
crates/project-core/: Cargo.toml  blueprint.rs  clipboard.rs  element.rs  history.rs  lib.rs  project.rs  project_manager.rs  selection.rs
crates/project-manager/: Cargo.toml  lib.rs
crates/project-manager/format/: mod.rs
crates/project-manager/operations/: mod.rs
crates/project-manager/storage/: mod.rs
crates/shared/: Cargo.toml  error.rs  id.rs  lib.rs  log_messages.rs  logging.rs  position.rs  serialization.rs
docs/: ARCHITECTURE.md  BLUEPRINT.md  CANVAS_EDITOR.md  DEVELOPMENT.md  FORMAT_SPX.md  LOGGING.md  PROJECT_CORE.md  README.md  SECURITY.md  TESTING.md
tools/: expand_diploma.py
