[package]
name = "core-blueprint"
version = "0.0.1"
description = "Blueprint domain model, validation, lowering, code generation, and compilation for Snappix"
edition = "2021"

[lib]
name = "core_blueprint"
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
