[package]
name = "core-ui-graphs"
version = "0.0.1"
description = "Core UI graphs for snappix app - Canvas and Slint code generation"
edition = "2021"

[lib]
name = "core_ui_graphs"
path = "lib.rs"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
zip = "0.6"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
