[package]
name = "project-core"
version = "0.0.1"
description = "Project domain operations and use-case commands for Snappix"
edition = "2021"

[lib]
name = "project_core"
path = "lib.rs"

[dependencies]
core-blueprint = { path = "../core-blueprint" }
core-ui-graphs = { path = "../core-ui-graphs" }
serde_json = "1"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
