[package]
name = "project-core"
version = "0.0.1"
description = "Project domain operations and use-case commands for Snappix"
edition = "2021"

[lib]
name = "project_core"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
core-blueprint = { path = "../core-blueprint" }
core-ui-graphs = { path = "../core-ui-graphs" }
image = { version = "0.25", default-features = false, features = ["png"] }
project-manager = { path = "../project-manager" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
