[package]
name = "project-manager"
version = "0.0.1"
description = "Project management for snappix - save, load, create projects"
edition = "2021"

[lib]
name = "project_manager"
path = "lib.rs"

[dependencies]
shared = { path = "../shared" }
core-ui-graphs = { path = "../core-ui-graphs" }
core-blueprint = { path = "../core-blueprint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
walkdir = "2.5"
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
