[package]
name = "shared"
version = "0.0.1"
description = "Shared types and utilities for snappix"
edition = "2021"

[lib]
name = "shared"
path = "lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"
rmp-serde = "1.3"
